feat: Introduce `SearchableSelect` component and `SelectOption` model, update `UcucuYagBilesik` entity and related Blazor pages and repositories.

--- a/frontend/Bitki.Blazor/Components/Pages/BilesikDetail.razor
+++ b/frontend/Bitki.Blazor/Components/Pages/BilesikDetail.razor
@@ -35,8 +35,7 @@
                 }
             </div>
             <div class="text-end">
-                <span class="badge bg-light text-dark border">ID: @bilesik.Id</span>
-                <a href="/bilesikler" class="btn btn-outline-secondary btn-sm ms-2">Listeye Dön</a>
+                <a href="/bilesikler" class="btn btn-outline-secondary btn-sm">Listeye Dön</a>
             </div>
         </div>
 
